# Voice-assistant-Valera-2.0

./: CMakeLists.txt  README.md
Database/: mydatabase.db  mydatabase.sql
src/: Valera.cpp  commandhandler.cpp  commandhandler.h  constants.h  database.cpp  database.h  levenshtein.cpp  levenshtein.h  speechProcessing.cpp  speechProcessing.h  voiceGuidance.h  voice_command
